--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.2"
+    "@astrojs/tailwind": "^5.1.0",
+    "@lucide/astro": "^0.540.0",
+    "astro": "^5.13.2",
+    "autoprefixer": "^10.4.20",
+    "tailwindcss": "^3.4.13"
   }
 }
